# WineQuality-using-Rust

./: Cargo.toml  README.md
src/: cleaning.rs  decisiontree.rs  knn_classifier.rs  linear_regression.rs  main.rs  random_forest_classifier.rs  train_test_split.rs
