[package]
name = "winequality_final_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.35.4", features = ["describe", "lazy", "ndarray", "object", "dtype-struct", "concat_str", "mode"] }
rand = "0.8"
smartcore = "0.3.2"